Convert metadata during remapping
Disable nested jar split package handler for the time being, I'll figure that out later